--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -4647,20 +4647,6 @@
   mrclass: '32M05 (20B27)'
   volume: '40'
 
-- number: '5'
-  author: 'Ghosh, Mrinal K. and Pradhan, Somnath'
-  fjournal: 'Stochastic Analysis and Applications'
-  url: 'https://doi.org/10.1080/07362994.2020.1845207'
-  pages: '819--841'
-  year: '2021'
-  title: 'Ergodic risk-sensitive stochastic differential games with reflecting diffusions in a bounded domain'
-  doi: '10.1080/07362994.2020.1845207'
-  issn: '0736-2994'
-  journal: 'Stoch. Anal. Appl.'
-  mrnumber: '4310348'
-  mrclass: '91A15 (91A23)'
-  volume: '39'
-
 - number: '3'
   author: 'Maity, Soma'
   fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
@@ -5089,6 +5075,35 @@
   mrnumber: '2215782'
   mrclass: '35J40 (35A08 35B60 35J67)'
   volume: '134'
+
+- number: '10'
+  author: 'Mallick, Arka and Nguyen, Hoai-Minh'
+  fjournal: 'Journal of Functional Analysis'
+  url: 'https://doi.org/10.1016/j.jfa.2022.109662'
+  pages: 'Paper No. 109662, 33'
+  year: '2022'
+  mrreviewer: 'Tom\''a\vs\ Garrigue\ Roskovec'
+  title: 'Gagliardo-Nirenberg and Caffarelli-Kohn-Nirenberg interpolation inequalities associated with Coulomb-Sobolev spaces'
+  doi: '10.1016/j.jfa.2022.109662'
+  issn: '0022-1236,1096-0783'
+  journal: 'J. Funct. Anal.'
+  mrnumber: '4474840'
+  mrclass: '26D10 (46E35)'
+  volume: '283'
+
+- number: '5'
+  author: 'Ghosh, Mrinal K. and Pradhan, Somnath'
+  fjournal: 'Stochastic Analysis and Applications'
+  url: 'https://doi.org/10.1080/07362994.2020.1845207'
+  pages: '819--841'
+  year: '2021'
+  title: 'Ergodic risk-sensitive stochastic differential games with reflecting diffusions in a bounded domain'
+  doi: '10.1080/07362994.2020.1845207'
+  issn: '0736-2994'
+  journal: 'Stoch. Anal. Appl.'
+  mrnumber: '4310348'
+  mrclass: '91A15 (91A23)'
+  volume: '39'
 
 - number: '1-4'
   author: 'Datta, Basudeb'
