Postdocs page Update

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -147,3 +147,43 @@
   image: true
   research-area: Nonlinear Analysis, Control Theory, Controllability and observability of dynamical systems
 
+- name: Ramlal Debnath
+  webpage:
+  phd:
+  user-id: ramlald
+  position: NBHM PDF
+  image: true
+  research-area:
+
+- name: Naveen Gupta
+  webpage:
+  phd:
+  user-id: naveengupta
+  position: NBHM PDF
+  image: true
+  research-area:
+
+- name: Murugan SP
+  webpage:
+  phd:
+  user-id: murugansp
+  position: IOE
+  image: true
+  research-area:
+
+- name: Md Hasan Ali Biswas
+  webpage:
+  phd:
+  user-id: hasanbiswas
+  position: NBHM PDF
+  image: true
+  research-area:
+
+- name: Souvik Pal
+  webpage:
+  phd:
+  user-id: souvikpal
+  position: NBHM PDF
+  image: true
+  research-area:
+
