postdocs.yaml update

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,10 @@
+- name  : Arpita Mal 
+  phd: Jadavpur University
+  user-id: arpitamal
+  position: NPDF
+  image: true
+  research-area: Functional analysis, Geometry of Banach space
+
 - name  : Sushil Singla
   phd: Shiv Nadar University
   user-id: 
