removed broken link

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -215,7 +215,7 @@
   research-area: "Harmonic analysis"  
   start: "2020"  
   end: "2021"  
-  present: <a target="_blank" href="https://www.niser.ac.in/sms/professor/rameshmanna">Assistant Professor, NISER Bhubaneswar</a>
+  present: Assistant Professor, NISER Bhubaneswar
 
 - name: "Anirudha Poria"  
   position: "Kothari"  
