--- a/.github/workflows/jekyll-test.yml
+++ b/.github/workflows/jekyll-test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Build with Jekyll
       run: |
         # sudo apt-get update  
@@ -21,9 +21,9 @@ jobs:
         bundle install --without development test 
         bundle exec jekyll build --config _config.yml,_config-root.yml
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        java-version: '11.0.11'
     - name: Test for broken links
       run: ./amm checklinks.sc
 
