--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -4,11 +4,12 @@
   position: NPDF
   image: true
   research-area: Functional analysis, Geometry of Banach space
+  present: Assistant Professor at Dhirubhai Ambani Institute of Information and Communication Technology
 
 - name: "Sushil Singla" 
   position: "Research Associate" 
   phd: "Shiv Nadar University" 
-  user-id: "" 
+  user-id: "0000-0001-9838-795X" 
   image: true 
   research-area: "Functional analysis, Operator algebras" 
   start: "2022" 
@@ -21,6 +22,7 @@
   position: Research Associate
   image: true
   research-area: Harmonic Analysis
+  present: Post Doctoral Fellow at Chennai Mathematical Institute
   
 - name: Rajesh Kumar Singh 
   phd: IIT Kanpur 
@@ -28,6 +30,7 @@
   position: NBHM
   image: true
   research-area: Harmonic Analysis
+  present: Secretary, Department for Promotion of Industry and Internal Trade, Ministry of Commerce and Industry
   
 - name: Shivani Goel
   phd: IIT Madras
@@ -35,14 +38,17 @@
   position: NPDF
   image: true
   research-area: Linear algebra, Graph theory
+  present: Assistant Professor at IIT Madras Zanzibar Campus
   
 - name: Jyotirmoy Ganguly
-  webpage:
+  webpage: https://www.cmi.ac.in/people/fac-profile.php?id=jyotirmoyg
   phd: IISER Pune
   user-id: jyotirmoyg
   position: NBHM
   image: true
-  research-area: Representation Theory  
+  research-area: Representation Theory
+  present: Post Doctoral Fellow at The Institute of Mathematical Sciences
+
   
 - name: Biltu Dan
   position: Raman PDF
