Postdocs' current position update

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -9,7 +9,7 @@
 - name: "Sushil Singla" 
   position: "Research Associate" 
   phd: "Shiv Nadar University" 
-  user-id: "0000-0001-9838-795X" 
+  user-id: "sushilsingla" 
   image: true 
   research-area: "Functional analysis, Operator algebras" 
   start: "2022" 
@@ -30,7 +30,7 @@
   position: NBHM
   image: true
   research-area: Harmonic Analysis
-  present: Secretary, Department for Promotion of Industry and Internal Trade, Ministry of Commerce and Industry
+  present: To Be Updated
   
 - name: Shivani Goel
   phd: IIT Madras
