--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1287,6 +1287,19 @@
   mrclass: '81G20 (53C80)'
   volume: '29'
 
+- url: 'https://doi.org/10.1007/978-3-031-37800-3_7'
+  mrnumber: '4676386'
+  pages: '137-163'
+  year: '[2023] \copyright 2023'
+  booktitle: 'From classical analysis to analysis on fractals. Vol. 1. A tribute to Robert Strichartz'
+  title: 'A scalar-valued Fourier transform for the Heisenberg group'
+  doi: '10.1007/978-3-031-37800-3\_7'
+  mrclass: '43A80 (33C45 35R03 42C05)'
+  author: 'Thangavelu, Sundaram'
+  series: 'Appl. Numer. Harmon. Anal.'
+  publisher: 'Birkh&auml;user/Springer, Cham'
+  isbn: '978-3-031-37799-0; 978-3-031-37800-3'
+
 - number: '3'
   author: 'Kanukurthi, Bhavana and Bhavana Obbattu, Sai Lakshmi and Sekar, Sruthi'
   fjournal: 'Journal of Cryptology. The Journal of the International Association for Cryptologic Research'
@@ -2687,6 +2700,19 @@
   mrnumber: '3625104'
   mrclass: '47D06 (37D45)'
   volume: '217'
+
+- author: 'Nadimpalli, Santosh and Sheth, Mihir'
+  fjournal: 'Journal of Number Theory'
+  url: 'https://doi.org/10.1016/j.jnt.2023.10.006'
+  pages: '124-145'
+  year: '2024'
+  title: 'On the integrality of locally algebraic representations of ${\rm GL}_{2}(D)$'
+  doi: '10.1016/j.jnt.2023.10.006'
+  issn: '0022-314X,1096-1658'
+  journal: 'J. Number Theory'
+  mrnumber: '4672189'
+  mrclass: '11F70 (22E50)'
+  volume: '257'
 
 - author: 'Pingali, Vamsi Pritham'
   fjournal: 'Advances in Mathematics'
@@ -4646,6 +4672,20 @@
   series: 'Adv. Lect. Math. (ALM)'
   mrclass: '32M05 (20B27)'
   volume: '40'
+
+- number: '4'
+  author: 'Ray, Samya Kumar and Sarkar, Srijan'
+  fjournal: 'Canadian Mathematical Bulletin. Bulletin Canadien de Math&eacute;matiques'
+  url: 'https://doi.org/10.4153/s0008439523000322'
+  pages: '1244-1254'
+  year: '2023'
+  title: 'A note on the column-row property'
+  doi: '10.4153/s0008439523000322'
+  issn: '0008-4395,1496-4287'
+  journal: 'Canad. Math. Bull.'
+  mrnumber: '4658216'
+  mrclass: '47L25'
+  volume: '66'
 
 - number: '3'
   author: 'Maity, Soma'
@@ -10309,21 +10349,6 @@
   mrclass: '35B27 (35J25 80M35 80M40)'
   volume: '198'
 
-- number: '1'
-  author: 'Kumar, Ashisha and Ray, Swagato K.'
-  fjournal: 'Monatshefte f&uuml;r Mathematik'
-  url: 'http://dx.doi.org/10.1007/s00605-014-0620-8'
-  pages: '41-75'
-  year: '2014'
-  mrreviewer: 'Hartmut F\~A${}^1\!/\!_4$hr'
-  title: 'End point estimates for Radon transform of radial functions on non-Euclidean spaces'
-  doi: '10.1007/s00605-014-0620-8'
-  issn: '0026-9255'
-  journal: 'Monatsh. Math.'
-  mrnumber: '3190770'
-  mrclass: '44A12 (42B20)'
-  volume: '174'
-
 - number: '2'
   author: 'Choudhury, Projesh Nath'
   fjournal: 'Bulletin of the London Mathematical Society'
@@ -10365,6 +10390,19 @@
   mrnumber: '2426509'
   mrclass: '14J60 (14J30)'
   volume: '212'
+
+- author: 'Bhunia, Pintu'
+  fjournal: 'Linear Algebra and its Applications'
+  url: 'https://doi.org/10.1016/j.laa.2023.11.021'
+  pages: '31-45'
+  year: '2024'
+  title: 'Improved bounds for the numerical radius via polar decomposition of operators'
+  doi: '10.1016/j.laa.2023.11.021'
+  issn: '0024-3795,1873-1856'
+  journal: 'Linear Algebra Appl.'
+  mrnumber: '4672688'
+  mrclass: '47A12 (15A60 47A30)'
+  volume: '683'
 
 - author: 'Gudi, Thirupathi and Majumder, Papri'
   fjournal: 'Journal of Computational and Applied Mathematics'
@@ -10641,6 +10679,35 @@
   mrnumber: '2174963'
   mrclass: '35J60 (35A08 35B50 35J70 49K20 49L25)'
   volume: '218'
+
+- number: '1'
+  author: 'Kumar, Ashisha and Ray, Swagato K.'
+  fjournal: 'Monatshefte f&uuml;r Mathematik'
+  url: 'http://dx.doi.org/10.1007/s00605-014-0620-8'
+  pages: '41-75'
+  year: '2014'
+  mrreviewer: 'Hartmut F\~A${}^1\!/\!_4$hr'
+  title: 'End point estimates for Radon transform of radial functions on non-Euclidean spaces'
+  doi: '10.1007/s00605-014-0620-8'
+  issn: '0026-9255'
+  journal: 'Monatsh. Math.'
+  mrnumber: '3190770'
+  mrclass: '44A12 (42B20)'
+  volume: '174'
+
+- number: '3'
+  author: 'Arora, Anita and Ayyer, Arvind'
+  fjournal: 'Combinatorial Theory'
+  url: 'https://doi.org/10.5070/c63362786'
+  pages: 'Paper No. 3, 29'
+  year: '2023'
+  title: 'The monopole-dimer model on Cartesian products of plane graphs'
+  doi: '10.5070/c63362786'
+  issn: '2766-1334'
+  journal: 'Comb. Theory'
+  mrnumber: '4683610'
+  mrclass: '82B20 (05A15 05C70)'
+  volume: '3'
 
 - number: '8'
   author: 'Bagchi, Bhaskar and Datta, Basudeb'
@@ -14428,6 +14495,20 @@
   mrclass: '76D99 (34C15)'
   volume: '33'
 
+- number: '1'
+  author: 'Mallik, Gouranga and Gudi, Thirupathi'
+  fjournal: 'Journal of Scientific Computing'
+  url: 'https://doi.org/10.1007/s10915-023-02390-4'
+  pages: 'Paper No. 6, 26'
+  year: '2024'
+  title: 'A hybrid high-order method for a class of strongly nonlinear elliptic boundary value problems'
+  doi: '10.1007/s10915-023-02390-4'
+  issn: '0885-7474,1573-7691'
+  journal: 'J. Sci. Comput.'
+  mrnumber: '4670082'
+  mrclass: '65N12 (65N15 65N30)'
+  volume: '98'
+
 - author: 'Khare, Apoorva and Tao, Terence'
   fjournal: 'S&eacute;minaire Lotharingien de Combinatoire'
   pages: 'Art. 14, 12'
@@ -15107,6 +15188,20 @@
   mrclass: '93E20 (49K45 49L25 93E11)'
   volume: '15'
 
+- number: '3-4'
+  author: 'Sau, Gobinda'
+  fjournal: 'The Mathematics Student'
+  url: 'https://doi.org/10.1016/0167-2789(95)00302-9'
+  pages: '113-139'
+  year: '2023'
+  title: 'Existence of a harmonic map from $\Bbb C$ to $\Bbb H^2$ with prescribed Hopf differential'
+  doi: '10.1016/0167-2789(95)00302-9'
+  issn: '0025-5742'
+  journal: 'Math. Student'
+  mrnumber: '4676938'
+  mrclass: '53C43 (53C21 58E20)'
+  volume: '92'
+
 - number: '1-3'
   author: 'Pranesachar, C. R.'
   fjournal: 'Discrete Mathematics'
@@ -15768,18 +15863,19 @@
   mrclass: '49J45 (35B27 35B37 49K20)'
   volume: '112'
 
-- number: '4'
-  author: 'Gudi, Thirupathi'
-  fjournal: 'International Journal of Numerical Analysis and Modeling. Series B'
-  pages: '299-316'
-  year: '2014'
-  mrreviewer: 'Lucas J&oacute;dar'
-  title: 'Babu&#353;ka&#39;s penalty method for inhomogeneous Dirichlet problem: error estimates and multigrid algorithms'
-  issn: '1923-2942'
-  journal: 'Int. J. Numer. Anal. Model. Ser. B'
-  mrnumber: '3320530'
-  mrclass: '65N30 (65N22 65N55)'
-  volume: '5'
+- number: '6'
+  author: 'Dey, Hiranya Kishore and Mondal, Archita'
+  fjournal: 'Journal of Pure and Applied Algebra'
+  url: 'https://doi.org/10.1016/j.jpaa.2023.107580'
+  pages: 'Paper No. 107580, 14'
+  year: '2024'
+  title: 'An exact upper bound for the sum of powers of element orders in non-cyclic finite groups'
+  doi: '10.1016/j.jpaa.2023.107580'
+  issn: '0022-4049,1873-1376'
+  journal: 'J. Pure Appl. Algebra'
+  mrnumber: '4676657'
+  mrclass: '20D60 (05E16 20E34 20F18)'
+  volume: '228'
 
 - number: '1'
   author: 'Lakshmi Lavanya, R. and Thangavelu, S.'
@@ -15986,6 +16082,31 @@
   mrnumber: '4180253'
   mrclass: '60F05 (05C80 60J05 60J90)'
   volume: '58'
+
+- number: '5'
+  author: 'Bhunia, Pintu and Paul, Kallol'
+  fjournal: 'Hacettepe Journal of Mathematics and Statistics'
+  pages: '1254-1262'
+  year: '2023'
+  title: '$A$-numerical radius: new inequalities and characterization of equalities'
+  issn: '1303-5010,2651-477X'
+  journal: 'Hacet. J. Math. Stat.'
+  mrnumber: '4674153'
+  mrclass: '47A12 (47A30 47A63)'
+  volume: '52'
+
+- number: '4'
+  author: 'Gudi, Thirupathi'
+  fjournal: 'International Journal of Numerical Analysis and Modeling. Series B'
+  pages: '299-316'
+  year: '2014'
+  mrreviewer: 'Lucas J&oacute;dar'
+  title: 'Babu&#353;ka&#39;s penalty method for inhomogeneous Dirichlet problem: error estimates and multigrid algorithms'
+  issn: '1923-2942'
+  journal: 'Int. J. Numer. Anal. Model. Ser. B'
+  mrnumber: '3320530'
+  mrclass: '65N30 (65N22 65N55)'
+  volume: '5'
 
 - number: '4'
   author: 'Chakrabarti, A. and Sahoo, T.'
@@ -17602,6 +17723,20 @@
   mrclass: '15A15 (05E05)'
   volume: '112'
 
+- number: '3-4'
+  author: 'Pingali, Vamsi Pritham'
+  fjournal: 'The Mathematics Student'
+  url: 'https://doi.org/10.1007/s11075-022-01381-0'
+  pages: '89-94'
+  year: '2023'
+  title: 'Physics helping mathematics: a couple of examples'
+  doi: '10.1007/s11075-022-01381-0'
+  issn: '0025-5742'
+  journal: 'Math. Student'
+  mrnumber: '4676935'
+  mrclass: '30C20 (31A15 78A25)'
+  volume: '92'
+
 - number: '5'
   author: 'Uberoi, Chanchal'
   fjournal: 'Current Science'
@@ -18521,6 +18656,19 @@
   mrclass: '05C70 (05A17 60G55 60K35 82B20)'
   volume: '9'
 
+- author: 'Sivaram, P.'
+  fjournal: 'Bulletin des Sciences Math&eacute;matiques'
+  url: 'https://doi.org/10.1016/j.bulsci.2023.103360'
+  pages: 'Paper No. 103360, 29'
+  year: '2024'
+  title: 'A note on modified $J$-flow with the Calabi ansatz'
+  doi: '10.1016/j.bulsci.2023.103360'
+  issn: '0007-4497,1952-4773'
+  journal: 'Bull. Sci. Math.'
+  mrnumber: '4669375'
+  mrclass: '53E30'
+  volume: '190'
+
 - number: '1-2'
   author: 'Krishnamurthy, E. V.'
   fjournal: 'Elektronische Informationsverarbeitung und Kybernetik'
@@ -18616,7 +18764,7 @@
   volume: '49'
 
 - number: '4'
-  author: 'Brooks, Jennifer and Curry, Sean and Grundmeier, Dusty and Gupta, Purvi and Kunz, Valentin and Malcom, Alekzander and Palencia, Kevin'
+  author: 'Brooks, Jennifer and Curry, Sean and Grundmeier, Dusty and  Gupta, Purvi and Kunz, Valentin and Malcom, Alekzander and  Palencia, Kevin'
   fjournal: 'Complex Analysis and its Synergies'
   url: 'https://doi.org/10.1007/s40627-022-00104-4'
   pages: 'Paper No. 20, 7'
@@ -19297,6 +19445,20 @@
   mrclass: '60C05 (05C80)'
   volume: '25'
 
+- author: 'Chowdhury, Sudipto and Gudi, Thirupathi'
+  fjournal: 'Journal of Computational and Applied Mathematics'
+  url: 'https://doi.org/10.1016/j.cam.2016.12.005'
+  pages: '290-306'
+  year: '2017'
+  mrreviewer: 'Daniel Wachsmuth'
+  title: 'A $C^0$ interior penalty method for the Dirichlet control problem governed by biharmonic operator'
+  doi: '10.1016/j.cam.2016.12.005'
+  issn: '0377-0427'
+  journal: 'J. Comput. Appl. Math.'
+  mrnumber: '3606080'
+  mrclass: '49M25 (65N15 65N30)'
+  volume: '317'
+
 - number: '2'
   author: 'Ayyer, Arvind'
   fjournal: 'Annals of Combinatorics'
@@ -19311,19 +19473,19 @@
   mrclass: '82B23 (05C70 82B20)'
   volume: '24'
 
-- author: 'Chowdhury, Sudipto and Gudi, Thirupathi'
-  fjournal: 'Journal of Computational and Applied Mathematics'
-  url: 'https://doi.org/10.1016/j.cam.2016.12.005'
-  pages: '290-306'
-  year: '2017'
-  mrreviewer: 'Daniel Wachsmuth'
-  title: 'A $C^0$ interior penalty method for the Dirichlet control problem governed by biharmonic operator'
-  doi: '10.1016/j.cam.2016.12.005'
-  issn: '0377-0427'
-  journal: 'J. Comput. Appl. Math.'
-  mrnumber: '3606080'
-  mrclass: '49M25 (65N15 65N30)'
-  volume: '317'
+- number: '6'
+  author: 'Bhimani, Divyang G. and Manna, Ramesh and Nicola, Fabio and Thangavelu, Sundaram and Trapasso, S. Ivan'
+  fjournal: 'Fractional Calculus and Applied Analysis. An International Journal for Theory and Applications'
+  url: 'https://doi.org/10.1007/s13540-023-00208-6'
+  pages: '2470-2492'
+  year: '2023'
+  title: 'On heat equations associated with fractional harmonic oscillators'
+  doi: '10.1007/s13540-023-00208-6'
+  issn: '1311-0454,1314-2224'
+  journal: 'Fract. Calc. Appl. Anal.'
+  mrnumber: '4673072'
+  mrclass: '35K05 (35S05 46E30)'
+  volume: '26'
 
 - number: '4'
   author: 'Khandekar, D. C. and Lawande, S. V. and Bhagwat, K. V.'
