--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -1290,7 +1290,7 @@
 - url: 'https://doi.org/10.1007/978-3-031-37800-3_7'
   mrnumber: '4676386'
   pages: '137--163'
-  year: '[2023] \copyright 2023'
+  year: '2023'
   booktitle: 'From classical analysis to analysis on fractals. Vol. 1. A tribute to Robert Strichartz'
   title: 'A scalar-valued Fourier transform for the Heisenberg group'
   doi: '10.1007/978-3-031-37800-3\_7'
