--- a/_data/extrapubs.yaml
+++ b/_data/extrapubs.yaml
@@ -1,3 +1,10 @@
+- year: 2024
+  author: Gadgil, Siddhartha, and Anand Rao Tadipatri. 
+  title: "Formalizing Giles Gardam’s Disproof of Kaplansky’s Unit Conjecture." 
+  booktitle: "Proceedings of the 13th ACM SIGPLAN International Conference on Certified Programs and Proofs" 
+  pages: 177-189
+  
+
 - pages: 'S4PP1 (14pp)'
   year: '2022'
   journal: 'Enum. Comb. Appl.'
