Postdoc webpage update

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -58,7 +58,7 @@
   office: N22
 
 - name: Dharmendra Kumar
-  webpage: math.iisc.ac.in/~dharmendrak
+  webpage: ~dharmendrak
   phd: IIT Gandhinagar
   user-id: dharmendrak
   position: IOE
